# a2_ros

./: .dockerignore  .gitignore  .gitmodules  README.md  compose.pc2.yaml  compose.yaml  entrypoint.sh  install.sh  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yaml
config/record/: nav.yaml
docker/: Dockerfile.dev
docs/: rss26_layout.json
environment/: Dockerfile.dev
environment/colcon/: pc2.defaults.yaml  robot.defaults.yaml  sim.defaults.yaml
scripts/: a2  a2_shell.sh  build_workspace.sh  clean_workspace.sh  common.sh  init_submodules.sh  patch_unitree.sh  setup.sh  setup_devenv.sh  setup_robot.sh  start_zenoh_router.sh  verify_mujoco.sh
scripts/local/: install.sh  setup.sh
scripts/pc2/: install.sh  pc2_bridge.sh  pc2_joy.sh  pc2_joylaunch.sh  pc2_launch.service
src/core/a2_deployment_config/: CMakeLists.txt  package.xml
src/core/a2_deployment_config/config/: cyclonedds.xml
src/core/a2_deployment_config/config/cyclonedds/: cyclonedds.sim.xml
src/core/a2_deployment_config/config/zenoh/: zenoh-session-config.robot.json5.jinja2  zenoh-session-config.sim.json5.jinja2
src/core/a2_deployment_config/scripts/: render_zenoh_config.py  setup_cyclonedds.sh  setup_zenoh.sh
src/core/a2_interfaces/: CMakeLists.txt  package.xml
src/core/a2_interfaces/msg/: OperatingMode.msg
src/meta_packages/a2_pc2/launch/: pc2.launch.py
src/meta_packages/a2_ros/: CMakeLists.txt  package.xml
src/meta_packages/a2_ros/include/: motor_crc.h
src/meta_packages/a2_ros/launch/: dlio.launch.py  exploration.launch.py  nuc.launch.py  (+3 more)
(+15 files in other folders)
